# pnl-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  performance.ipynb  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml
src/abstract/: ExchangeClientWrapper.py  exchange_client_wrapper.py
src/abstract/httpRequest/: BaseRestApi.py  base_rest_api.py
src/ascendex/: AscendexClientWrapper.py  AscendexRestApi.py  ascendex_client_wrapper.py  ascendex_rest_api.py
src/binance/: BinanceClientWrapper.py  binance_client_wrapper.py
src/gate/: GateClientWrapper.py
src/gate_io/: GateIoClientWrapper.py
src/kucoin/: KucoinClientWrapper.py  kucoin_client_wrapper.py
src/processing/: __init__.py
